# prism

./: .coverage  .dockerignore  .gitignore  .gitleaks.toml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  docker-compose.yml  prism.example.yaml  pyproject.toml  ruff.toml
.beads/: config.yaml  interactions.jsonl  issues.jsonl  metadata.json
.githooks/: post-checkout  post-merge  pre-commit  pre-push  prepare-commit-msg
.github/workflows/: ci.yml
docs/: ai-agents.md  usage.md
docs/adr/: 0001-subscription-cli-first-runtime.md  0002-native-docker-credential-mount-auth.md  0003-python-uv-tooling.md  0004-github-first-via-gh-cli.md  0005-beads-work-tracking.md  0006-reasoning-effort-routing-knob.md  0007-runtime-divergence-from-opencode.md  0008-orchestration-pluggable-seam.md  0009-markdown-agent-prompts.md  0010-mandatory-tdd-red-green-refactor.md  0011-decision-ordering-and-fail-on-semantics.md  0012-enforced-cross-cutting-invariants.md  0013-risk-tiers.md  0014-ast-based-risk-escalation.md  0015-liveness-based-timeouts.md  README.md  template.md
docs/reference/: cloudflare-lessons.md
docs/retrospectives/: 2026-05-29-first-build-retro.md
scripts/: check.sh
scripts/hooks/: lint.sh
src/prism/: __init__.py  ast_risk.py  cli.py  config.py  coordinator.py  findings.py  (+7 more)
tests/: conftest.py  test_ast_risk.py  test_cli_e2e.py  test_config.py  test_coordinator_fanout.py  test_findings.py  test_jsonio.py  test_judge.py  test_prompts.py  test_reporter.py  test_risk.py  test_smoke.py  test_telemetry.py  test_transcripts.py  test_workspace.py
(+33 files in other folders)
