[project]
name = "prism"
version = "0.1.0"
description = "AI code review orchestration driven by Claude/Codex subscription CLIs"
authors = [
    { name = "Joshua Fuller", email = "joshuafuller@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
]

[project.scripts]
prism = "prism.cli:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.15",
    "types-pyyaml>=6.0.12.20260518",
]

[tool.pytest.ini_options]
markers = ["live: hits real subscription CLIs (excluded from the default run)"]
addopts = "-m 'not live'"
asyncio_mode = "auto"

[tool.mypy]
strict = true
files = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "C4", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["prism"]

[tool.ruff.format]
quote-style = "double"
